Bug 415856 - kcmshell5 plante a chaque fois que j'entre le nom d'hote dans la section avancée du programme
Summary: kcmshell5 plante a chaque fois que j'entre le nom d'hote dans la section avan...
Status: RESOLVED FIXED
Alias: None
Product: plasma-nm
Classification: Unmaintained
Component: kcm (other bugs)
Version First Reported In: 5.3.2
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Jan Grulich
URL:
Keywords:
: 415490 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-01-04 06:45 UTC by josselin
Modified: 2020-01-07 12:18 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
kcmshell5 crashes when entering hostname in plasma-nm advanced menu (6.41 KB, text/plain)
2020-01-04 06:45 UTC, josselin
Details
attachment-17745-0.html (3.14 KB, text/html)
2020-01-06 10:13 UTC, josselin
Details
attachment-18484-0.html (2.39 KB, text/html)
2020-01-06 10:42 UTC, josselin
Details
attachment-19024-0.html (3.79 KB, text/html)
2020-01-06 11:07 UTC, josselin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description josselin 2020-01-04 06:45:19 UTC
Created attachment 124889 [details]
kcmshell5 crashes when entering hostname in plasma-nm advanced menu

SUMMARY


STEPS TO REPRODUCE
1. open plasma-nm5 
2. go to Advanced section (relative to hostname)in ip4 checkbox
3. enter your hostname

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 josselin 2020-01-04 06:49:27 UTC
 [linux-yknx] openSUSE Tumbleweed 20200101 | Linux 5.3.12-2-default x86_64 | 2-thr Intel(R) Core(TM) i3-3120M CPU 2500MHz | Load: 0.20 Tasks: 797 | Mem: 2884/7780MB | Disk: 266/797GB | Gfx: Intel Corporation 3rd Gen Core processor Graphics Controll
Comment 2 Jan Grulich 2020-01-06 10:10:26 UTC
Git commit fa1257cfc9f59cdaba9e7fba57960e2ad23f39aa by Jan Grulich.
Committed on 06/01/2020 at 09:56.
Pushed by grulich into branch 'Plasma/5.17'.

Do not crash when changing advanced IPv4 configuration

M  +4    -4    libs/editor/settings/ipv4widget.cpp

https://commits.kde.org/plasma-nm/fa1257cfc9f59cdaba9e7fba57960e2ad23f39aa
Comment 3 josselin 2020-01-06 10:13:06 UTC
Created attachment 124917 [details]
attachment-17745-0.html

ok thanks
how do I apply the diff?
Ma boite mail est protégée et nettoyée par cleanfox.io
<https://chrome.google.com/webstore/detail/cleanfox/fpejofmgechlgfomhbgjglkboeoobnma>

Le lun. 6 janv. 2020 à 11:10, Jan Grulich <bugzilla_noreply@kde.org> a
écrit :

> https://bugs.kde.org/show_bug.cgi?id=415856
>
> Jan Grulich <jgrulich@redhat.com> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>          Resolution|---                         |FIXED
>       Latest Commit|                            |
> https://commits.kde.org/pla
>                    |
> |sma-nm/fa1257cfc9f59cdaba9e
>                    |                            |7fba57960e2ad23f39aa
>              Status|REPORTED                    |RESOLVED
>
> --- Comment #2 from Jan Grulich <jgrulich@redhat.com> ---
> Git commit fa1257cfc9f59cdaba9e7fba57960e2ad23f39aa by Jan Grulich.
> Committed on 06/01/2020 at 09:56.
> Pushed by grulich into branch 'Plasma/5.17'.
>
> Do not crash when changing advanced IPv4 configuration
>
> M  +4    -4    libs/editor/settings/ipv4widget.cpp
>
> https://commits.kde.org/plasma-nm/fa1257cfc9f59cdaba9e7fba57960e2ad23f39aa
>
> --
> You are receiving this mail because:
> You are on the CC list for the bug.
> You reported the bug.
Comment 4 Jan Grulich 2020-01-06 10:29:31 UTC
You will either need to wait for your distirbution to pick it (most likely in a new version) or compile plasma-nm yourself from sources.
Comment 5 josselin 2020-01-06 10:42:50 UTC
Created attachment 124918 [details]
attachment-18484-0.html

ok I will try to compile it so
Ma boite mail est protégée et nettoyée par cleanfox.io
<https://chrome.google.com/webstore/detail/cleanfox/fpejofmgechlgfomhbgjglkboeoobnma>

Le lun. 6 janv. 2020 à 11:29, Jan Grulich <bugzilla_noreply@kde.org> a
écrit :

> https://bugs.kde.org/show_bug.cgi?id=415856
>
> Jan Grulich <jgrulich@redhat.com> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>                  CC|                            |jgrulich@redhat.com
>
> --- Comment #4 from Jan Grulich <jgrulich@redhat.com> ---
> You will either need to wait for your distirbution to pick it (most likely
> in a
> new version) or compile plasma-nm yourself from sources.
>
> --
> You are receiving this mail because:
> You reported the bug.
> You are on the CC list for the bug.
Comment 6 josselin 2020-01-06 11:07:49 UTC
Created attachment 124919 [details]
attachment-19024-0.html

thank you very much it works
Ma boite mail est protégée et nettoyée par cleanfox.io
<https://chrome.google.com/webstore/detail/cleanfox/fpejofmgechlgfomhbgjglkboeoobnma>

Le lun. 6 janv. 2020 à 11:42, josselin neveux <jneveux2@gmail.com> a écrit :

> ok I will try to compile it so
> Ma boite mail est protégée et nettoyée par cleanfox.io
> <https://chrome.google.com/webstore/detail/cleanfox/fpejofmgechlgfomhbgjglkboeoobnma>
>
> Le lun. 6 janv. 2020 à 11:29, Jan Grulich <bugzilla_noreply@kde.org> a
> écrit :
>
>> https://bugs.kde.org/show_bug.cgi?id=415856
>>
>> Jan Grulich <jgrulich@redhat.com> changed:
>>
>>            What    |Removed                     |Added
>>
>> ----------------------------------------------------------------------------
>>                  CC|                            |jgrulich@redhat.com
>>
>> --- Comment #4 from Jan Grulich <jgrulich@redhat.com> ---
>> You will either need to wait for your distirbution to pick it (most
>> likely in a
>> new version) or compile plasma-nm yourself from sources.
>>
>> --
>> You are receiving this mail because:
>> You reported the bug.
>> You are on the CC list for the bug.
>
>
>
> --
>
> Ma boite mail est protégée et nettoyée par cleanfox.io
> <https://chrome.google.com/webstore/detail/cleanfox/fpejofmgechlgfomhbgjglkboeoobnma>
>
Comment 7 Kai Uwe Broulik 2020-01-07 12:18:15 UTC
*** Bug 415490 has been marked as a duplicate of this bug. ***