Do not crash when changing advanced IPv4 configuration

BUG: 415856